--- a/backend/src/views/login.ejs
+++ b/backend/src/views/login.ejs
@@ -17,8 +17,8 @@
           <% } %>
 
           <form action="/login" method="post" novalidate>
-            <label for="username">Username</label>
-            <input id="username" name="username" required />
+            <label for="email">Email</label>
+            <input id="email" name="email" required />
 
             <label for="password">Password</label>
             <input id="password" name="password" type="password" required />
