--- a/backend/src/views/layout/header.ejs
+++ b/backend/src/views/layout/header.ejs
@@ -6,8 +6,8 @@
   <title><%= title %></title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/2.0.2/css/toastr.min.css">
-  <!-- Toastr (served by express-toastr) -->
-  <link rel="stylesheet" href="/toastr.css">
+  <!-- Toastr CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" />
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -22,7 +22,7 @@
           aria-expanded="false"
           aria-label="Toggle navigation"
         >
-          <span class="navbar-toggler-icon"></span>
+        <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -45,3 +45,17 @@
         </div>
       </div>
     </nav>
+
+    <!-- Toast container -->
+    <div class="toast-container position-fixed bottom-0 end-0 p-3">
+      <% if (flash && flash.success) { %>
+        <% flash.success.forEach(msg => { %>
+          <div class="toast align-items-center text-bg-success border-0" role="alert">
+            <div class="d-flex">
+              <div class="toast-body"><%= msg %></div>
+              <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast"></button>
+            </div>
+          </div>
+        <% }) %>
+      <% } %>
+    </div>
