--- a/backend/src/views/dashboard.ejs
+++ b/backend/src/views/dashboard.ejs
@@ -2,7 +2,6 @@
 
   <div class="container mt-4">
     <h1 class="mb-4">Admin Dashboard</h1>
-    <p>Welcome to the admin dashboard!</p>
 
     <div class="row mt-4">
       <!-- Product Category Card -->
@@ -30,7 +29,7 @@
         <div class="card text-center shadow-sm">
           <div class="card-body">
             <h5 class="card-title">Seller</h5>
-            <p class="display-6 fw-bold">8</p>
+            <p class="display-6 fw-bold"><%= sellerCount %></p>
           </div>
         </div>
       </div>
@@ -40,7 +39,7 @@
         <div class="card text-center shadow-sm">
           <div class="card-body">
             <h5 class="card-title">Buyer</h5>
-            <p class="display-6 fw-bold">120</p>
+            <p class="display-6 fw-bold"><%= buyerCount %></p>
           </div>
         </div>
       </div>
