--- a/backend/src/views/partials/header.ejs
+++ b/backend/src/views/partials/header.ejs
@@ -12,7 +12,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
-        <a class="navbar-brand" href="#">Auction Web</a>
+        <a class="navbar-brand" href="/admin/dashboard">Auction Web</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -27,7 +27,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link <%= activePage === 'product-category' ? 'active' : '' %>" aria-current="page" href="/admin/product-category">Product Category</a>
+              <a class="nav-link <%= activePage === 'category' ? 'active' : '' %>" aria-current="page" href="/admin/category">Product Category</a>
             </li>
             <li class="nav-item">
               <a class="nav-link <%= activePage === 'product' ? 'active' : '' %>" href="/admin/product">Product</a>
