--- a/backend/src/views/category/category-list.ejs
+++ b/backend/src/views/category/category-list.ejs
@@ -58,6 +58,30 @@
             <% } %>
         </tbody>
     </table>
+    
+    <!-- Pagination -->
+    <nav aria-label="Page navigation">
+        <ul class="pagination justify-content-center">
+            <% if (currentPage > 1) { %>
+                <li class="page-item">
+                <a class="page-link" href="/admin/category?currentPage=<%= currentPage - 1 %>&search=<%= search %>">Previous</a>
+                </li>
+            <% } %>
+
+            <% for (let i = 1; i <= totalPages; i++) { %>
+                <li class="page-item <%= currentPage === i ? 'active' : '' %>">
+                <a class="page-link" href="/admin/category?currentPage=<%= i %>&search=<%= search %>"><%= i %></a>
+                </li>
+            <% } %>
+
+            <% if (currentPage < totalPages) { %>
+                <li class="page-item">
+                <a class="page-link" href="/admin/category?currentPage=<%= currentPage + 1 %>&search=<%= search %>">Next</a>
+                </li>
+            <% } %>
+        </ul>
+    </nav>
+
 </div>
 
 <%- include('../partials/footer') %>
