category detail added

--- a/backend/src/views/partials/header.ejs
+++ b/backend/src/views/partials/header.ejs
@@ -38,6 +38,9 @@
             <li class="nav-item">
               <a class="nav-link <%= activePage === 'buyer' ? 'active' : '' %>" href="/admin/buyer">Buyer</a>
             </li>
+          </ul>
+          <!-- Right side logout -->
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item">
               <a class="nav-link" href="/logout">Logout</a>
             </li>
