--- a/backend/src/views/category/category-list.ejs
+++ b/backend/src/views/category/category-list.ejs
@@ -15,8 +15,9 @@
         <div class="col-md-8">
             <input type="text" name="search" class="form-control" placeholder="Search category by name" value="<%= search %>">
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4 d-flex gap-2">
             <button type="submit" class="btn btn-primary w-100">Search</button>
+            <button type="button" class="btn btn-secondary w-100" onclick="window.location.href='/admin/category'">Reset</button>
         </div>
     </form>
 
