--- a/backend/src/views/product/product-view.ejs
+++ b/backend/src/views/product/product-view.ejs
@@ -18,7 +18,7 @@
     <table class="table table-bordered">
         <tr>
             <th>Product ID</th>
-            <td><%= product.product_id %></td>
+            <td><%= product.item_id %></td>
         </tr>
         <tr>
             <th>Title</th>
